[YGH-204] camp theming

--- a/node/node--camp--full.html.twig
+++ b/node/node--camp--full.html.twig
@@ -130,7 +130,7 @@
     {{ content.field_header_content }}
     <div class="container">
       <div class="row">
-        <div class="content-main-region col-sm-12">
+        <div class="content-main-region">
           {{ content.field_camp_body }}
         </div>
       </div>
