[YMCA-1574] redirect to winners page with event subscriber; sorting for winners on winner page; fix bug with path for images; fix codesniffer error

--- a/docroot/modules/custom/ymca_retention/templates/layouts/ymca-retention-winners-layout.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/layouts/ymca-retention-winners-layout.html.twig
@@ -11,7 +11,7 @@
             <div class="compain-header--content">
                 <div class="container">
                     <div class="logo">
-                        <img alt="logo" src="/{{ base_path ~ directory }}/prototypes/ysr_2017/img/logo-phoenix-light.svg">
+                        <img alt="logo" src="{{ base_path }}themes/custom/ymca/prototypes/ysr_2017/img/logo-phoenix-light.svg">
                     </div>
 
                     <div class="content">
@@ -21,12 +21,9 @@
                 </div>
             </div>
         </header>
-
         {{ content.header }}
     </div>
 </div>
 <div class="container-full-width">
-
     {{ content.main }}
-
 </div>
