[YMCA-1574] move logo to the header block; add t() for template strings;add cache for winners array

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-form.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-form.html.twig
@@ -5,6 +5,20 @@
  */
 #}
 
+<header class="compain-header">
+    <div class="compain-header--content">
+        <div class="container">
+            <div class="logo">
+                <img alt="logo" src="{{ base_path }}themes/custom/ymca/prototypes/ysr_2017/img/logo-phoenix-light.svg">
+            </div>
+
+            <div class="content">
+                <div class="title">{{ 'Y RECHARGE CHALLENGE'|t }}</div>
+                <div class="sub-title">{{ 'Lucky Winners'|t }}</div>
+            </div>
+        </div>
+    </div>
+</header>
 <div class="compain-form-winners">
     <div class="container">
         <div class="row">
