--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-info.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-info.html.twig
@@ -16,7 +16,7 @@
                     </figure>
                     <div class="bucks-header">
                         <span class="sum"><span class="currency">$</span><span class="amount">100</span></span>
-                        <span class="cert-description">Y Bucks <br> Certificates</span>
+                        <span class="cert-description">{{ 'Y Bucks <br> Certificates'|t }}</span>
                     </div>
                     <p class="winner-name">{{ '{{ winner.name }}' }}</p>
                     <p class="winner-id">ID: {{ '{{ winner.id }}' }}</p>
@@ -41,7 +41,7 @@
                             <div class="bucks-header">
                                                 <span class="sum"><span class="currency">$</span><span
                                                             class="amount">25</span></span>
-                                <span class="cert-description">Y Bucks <br> Certificates</span>
+                                <span class="cert-description">{{ 'Y Bucks <br> Certificates'|t }}</span>
                             </div>
                             <p class="winner-name">{{ '{{ winner.name }}' }}</p>
                             <p class="winner-id">ID: {{ '{{ winner.id }}' }}</p>
@@ -58,7 +58,7 @@
                             <div class="bucks-header">
                                                 <span class="sum"><span class="currency">$</span><span
                                                             class="amount">5</span></span>
-                                <span class="cert-description">Y Bucks <br> Certificates</span>
+                                <span class="cert-description">{{ 'Y Bucks <br> Certificates'|t }}</span>
                             </div>
                         </div>
                     </div>
