--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-form.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-form.html.twig
@@ -9,7 +9,7 @@
     <div class="compain-header--content">
         <div class="container">
             <div class="logo">
-                <img alt="logo" src="{{ base_path }}themes/custom/ymca/prototypes/ysr_2017/img/logo-phoenix-light.svg">
+                <img alt="logo" src="{{ base_path ~ directory }}themes/custom/ymca/prototypes/ysr_2017/img/logo-phoenix-light.svg">
             </div>
 
             <div class="content">
