[YMCA-1574] fix bug with images

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-info.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-info.html.twig
@@ -12,7 +12,7 @@
             <div class="col-sm-12">
                 <div class="winner" data-ng-repeat="winner in winners1place">
                     <figure class="img center">
-                        <img alt="img" src="{{ base_path ~ directory }}themes/custom/ymca/prototypes/ysr_2017/img/bucks.png">
+                        <img alt="img" src="{{ base_path }}themes/custom/ymca/prototypes/ysr_2017/img/bucks.png">
                     </figure>
                     <div class="bucks-header">
                         <span class="sum"><span class="currency">$</span><span class="amount">100</span></span>
@@ -36,7 +36,7 @@
                     <div class="winner-wrapper ">
                         <div class="winner ">
                             <figure class="img center">
-                                <img alt="img" src="{{ base_path ~ directory }}themes/custom/ymca/prototypes/ysr_2017/img/bucks.png">
+                                <img alt="img" src="{{ base_path }}themes/custom/ymca/prototypes/ysr_2017/img/bucks.png">
                             </figure>
                             <div class="bucks-header">
                                                 <span class="sum"><span class="currency">$</span><span
