[YGH-384] fix styles for flexible content blocks in 3column paragraphs

--- a/prototypes/scss/structs/content.scss
+++ b/prototypes/scss/structs/content.scss
@@ -48,3 +48,10 @@ body {
     }
   }
 }
+
+.node__content .node--view-mode-flexible-content h2 a {
+  color: $purple;
+  &:hover {
+    text-decoration: none;
+  }
+}
