--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-intro.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-intro.html.twig
@@ -13,7 +13,7 @@
 
   <div class="compain-content-win">
     <div class="content">
-      <h2>{{ ''|t }}</h2>
+      <h2>{{ 'to be announced!'|t }}</h2>
       <p>{{ 'The drawing will take place at the end of the challenge.'|t }}<br><br>
         <b>{{ description }}</b>
       </p>
