[YGH-439] Make webform theming

--- a/prototypes/scss/screen.scss
+++ b/prototypes/scss/screen.scss
@@ -35,6 +35,7 @@
 @import "./paragraphs/testimonials";
 @import "./paragraphs/camp_menu";
 
+@import "./modules/forms";
 @import "./modules/gallery";
 @import "./modules/membership";
 @import "./modules/locations";
