[YMCA-1583] Winners prizes and message.

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-form.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-form.html.twig
@@ -16,6 +16,7 @@
         <div class="title">{{ 'Y RECHARGE CHALLENGE'|t }}</div>
         <div class="sub-title">{{ 'Lucky Winners'|t }}</div>
       </div>
+      <p style="color: white; font-weight: bold;">Y Bucks will be available for pick up in branch on April 1</p>
     </div>
   </div>
 </header>
