--- a/docroot/themes/custom/ymca/templates/html/html--footer.html.html.twig
+++ b/docroot/themes/custom/ymca/templates/html/html--footer.html.html.twig
@@ -34,7 +34,7 @@
 <html{{ html_attributes }}>
   <head>
     <head-placeholder token="{{ placeholder_token }}">
-    <title>{{ head_title|safe_join(' | ') }}</title>
+    <title>{{ 'YMCA Twin Cities'|t }}</title>
     {% for script in scripts %}
       {{ script }}
     {% endfor %}
