--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -5162,7 +5162,7 @@ a[href="#step2"] {
 .camp-menu__item {
   height: 50px;
   height: 5rem;
-  display: inline-block;
+  float: left;
   list-style: none;
 }
 .camp-menu__item a {
