--- a/screen.scss
+++ b/screen.scss
@@ -34,6 +34,7 @@
 @import "./paragraphs/amenities";
 @import "./paragraphs/testimonials";
 @import "./paragraphs/camp_menu";
+@import "./paragraphs/1c";
 
 @import "./modules/forms";
 @import "./modules/gallery";
