--- a/css/screen.css
+++ b/css/screen.css
@@ -7380,6 +7380,17 @@ body {
       background-color: #c6168d; }
     .node--type-blog.node--view-mode-teaser.blog-photo .inner-wrapper .blog-heading, .node--type-testimonial.node--view-mode-teaser.blog-photo .inner-wrapper .blog-heading {
       background-color: rgba(35, 31, 32, 0.5); }
+    .node--type-blog.node--view-mode-teaser.blog-color .inner-wrapper, .node--type-testimonial.node--view-mode-teaser.blog-color .inner-wrapper {
+      padding-top: 90%; }
+      @media (min-width: 768px) and (max-width: 1023px) {
+        .node--type-blog.node--view-mode-teaser.blog-color .inner-wrapper, .node--type-testimonial.node--view-mode-teaser.blog-color .inner-wrapper {
+          padding-top: 94%; } }
+      @media (min-width: 1024px) and (max-width: 1199px) {
+        .node--type-blog.node--view-mode-teaser.blog-color .inner-wrapper, .node--type-testimonial.node--view-mode-teaser.blog-color .inner-wrapper {
+          height: 283px; } }
+      @media (min-width: 1200px) {
+        .node--type-blog.node--view-mode-teaser.blog-color .inner-wrapper, .node--type-testimonial.node--view-mode-teaser.blog-color .inner-wrapper {
+          height: 350px; } }
     .node--type-blog.node--view-mode-teaser.blog-story .inner-wrapper, .node--type-testimonial.node--view-mode-teaser.blog-story .inner-wrapper {
       border: 1px solid #ccc; }
       .node--type-blog.node--view-mode-teaser.blog-story .inner-wrapper h2,
