--- a/css/screen.css
+++ b/css/screen.css
@@ -8371,9 +8371,9 @@ fieldset .fieldset-wrapper {
   margin: 0;
   font-family: "CachetBook", Verdana, sans-serif; }
   .branch-header .desktop .column {
-    -webkit-flex-basis: 20%;
-        -ms-flex-preferred-size: 20%;
-            flex-basis: 20%;
+    -webkit-flex-basis: 30%;
+        -ms-flex-preferred-size: 30%;
+            flex-basis: 30%;
     width: auto; }
     .branch-header .desktop .column:first-child {
       margin-left: 0; }
@@ -8402,7 +8402,8 @@ fieldset .fieldset-wrapper {
   .branch-header .desktop a {
     color: #fff; }
   .branch-header .desktop .today-hours {
-    position: relative; }
+    position: relative;
+    margin: 0 0 7px 0; }
     .branch-header .desktop .today-hours .today {
       margin-right: 10px; }
     .branch-header .desktop .today-hours .show-link,
@@ -8413,7 +8414,7 @@ fieldset .fieldset-wrapper {
       top: 60px;
       background: #5c2e91;
       padding: 5px 15px;
-      width: 240px;
+      width: 270px;
       left: -15px;
       z-index: 1; }
       @media (min-width: 992px) {
