[YGH-470] Update admin toolbar z-index

--- a/css/screen.css
+++ b/css/screen.css
@@ -6349,6 +6349,9 @@ body {
 .toolbar-fixed.toolbar-vertical.toolbar-tray-open .viewport .top-navs {
   margin-left: 15rem; }
 
+#toolbar-administration * {
+  z-index: 1050; }
+
 .nav.dropdown-menu {
   background-color: #0060af;
   border: 1px solid #fff; }
