--- a/templates/forms/openy-calc-form-header.html.twig
+++ b/templates/forms/openy-calc-form-header.html.twig
@@ -3,8 +3,14 @@
 <div class="navbar">
   <div class="navbar-inner">
     <ul class="nav nav-pills">
+    {% set active_step = 1 %}
     {% for step in steps %}
-      <li{% if step.active %} class="active"{% endif %}>
+      {% if step.active %}
+        {% set active_step = step.number %}
+      {% endif %}
+    {% endfor %}
+    {% for step in steps %}
+      <li{% if step.number == active_step %} class="active"{% endif %}>
       <a href="#step{{ step.number }}" data-toggle="tab" data-step="{{ step.number }}">
       <span class="nav-pills__text">{{ step.number }}. {{ step.title }}</span></a>
       </li>
