[YGH-201] Theme /join page accordingly to styleguide

--- a/membership.scss
+++ b/membership.scss
@@ -289,6 +289,11 @@
     .show-link {
       display: none;
     }
+    .today-hours {
+      h4 {
+        display: none;
+      }
+    }
     .branch-hours {
       margin-top: 10px;
       display: block !important;
