[YGH-454] Add membership link.

--- a/forms/form-element-membership-type.html.twig
+++ b/forms/form-element-membership-type.html.twig
@@ -87,7 +87,7 @@
   {% if label_display == 'after' %}
     <div class="clearfix form-element-wrapper">
       <div class="col-md-6 left">
-        <h3>{{ data.title }}</h3>
+        <h3><a href="{{ data.path }}">{{ data.title }}</a></h3>
         <p>{{ data.description }}</p>
       </div>
       <div class="col-md-6 right">
