--- a/themes/openy_themes/openy_rose/scss/modules/_forms.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_forms.scss
@@ -184,3 +184,10 @@
     margin: 10px 0;
   }
 }
+
+.form-item, .form-actions, .captcha {
+  margin: 1em 0.75em;
+}
+.form-type-checkbox {
+  padding: 0;
+}
