--- a/prototypes/scss/modules/locations.scss
+++ b/prototypes/scss/modules/locations.scss
@@ -83,8 +83,9 @@
   header h2 {
     padding-left: 20px;
     padding-bottom: 0px;
+    margin-top: 30px;
+    font-size: 30px;
     clear: both;
-    margin-top: 0;
     font-weight: bold;
   }
   h2.color-purple {
