Updates for button and header link colors

--- a/themes/openy_themes/openy_rose/color/preview.css
+++ b/themes/openy_themes/openy_rose/color/preview.css
@@ -44,7 +44,7 @@
 }
 .color-preview .preview-button {
   background-color: #00aeef;
-  color: #ffffff;
+  color: #fffffc;
   margin: 10px auto;
   padding: 10px;
   text-align: center;
