--- a/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
+++ b/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
@@ -872,7 +872,7 @@ body .ajax-progress-throbber {
   max-height: 500px;
 }
 
-.navbar-default .navbar-nav > li:first-child > a {
+.navbar-default #block-top-menu-2 .navbar-nav > li:first-child > a {
   padding: 3px 15px;
   border-radius: 5px;
   background-color: #b92f9e;
@@ -888,6 +888,6 @@ body .ajax-progress-throbber {
     background-color: #9c1f7b;
   }
 }
-.affix .navbar-default .navbar-nav > li:first-child > a {
+.affix #block-top-menu-2 .navbar-default .navbar-nav > li:first-child > a {
   margin-top: 10px;
 }
