--- a/prototypes/scss/modules/forms.scss
+++ b/prototypes/scss/modules/forms.scss
@@ -70,6 +70,9 @@ fieldset {
     .form-submit {
       min-width: 100px;
       margin-right: 15px;
+      height: 32px;
+      line-height: 32px;
+      font-size: 17px;
     }
   }
   div.webform-openy-member {
@@ -81,5 +84,101 @@ fieldset {
 .webform-address {
   .fieldset-wrapper {
     padding-top: 0;
+  }
+}
+
+// Financial aid form specific styles.
+.webform-submission-financial-aid-form {
+  @include breakpoint(tablet) {
+    .js-form-item-address-city {
+      float: left;
+      margin-right: 10px;
+      input {
+        max-width: 252px;
+      }
+    }
+    .js-form-item-address-postal-code {
+      input {
+        max-width: 152px;
+      }
+    }
+    .js-form-item-phone {
+      float: left;
+      margin-right: 10px;
+      input {
+        max-width: 202px;
+      }
+    }
+    .js-form-item-additional-phone {
+      input {
+        max-width: 202px;
+      }
+    }
+    .webform-openy-member {
+      .js-form-type-date {
+        float: left;
+        margin-right: 10px;
+        input {
+          max-width: 252px;
+        }
+      }
+      .js-form-type-select {
+        select {
+          max-width: 202px;
+        }
+      }
+    }
+    .form-item-household-members-number {
+      display: inline-block;
+      margin-right: 10px;
+      label {
+        max-width: 135px;
+      }
+      input {
+        max-width: 135px;
+      }
+    }
+    .form-item-adjusted-gross-income {
+      display: inline-block;
+      input {
+        max-width: 202px;
+      }
+    }
+    .form-item-extenuating-circumstances {
+      textarea {
+        max-width: 414px;
+      }
+    }
+    #edit-address-container,
+    #edit-family-members,
+    #edit-please-indicate-container,
+    #edit-parent-guardian {
+      legend span {
+        border: none;
+      }
+      > .fieldset-wrapper {
+        border: 1px solid $light-grey;
+        float: left;
+        padding: 15px;
+      }
+      .webform-multiple-table td:last-child {
+        vertical-align: top;
+        width: auto;
+        padding: 0;
+        input {
+          margin-left: -20px;
+        }
+        input:first-child {
+          display: none;
+        }
+        .ajax-progress-throbber {
+          display: block;
+          margin-left: -27px;
+          .message {
+            display: none;
+          }
+        }
+      }
+    }
   }
 }
