[YLI-97] Copy theme configs from YGTC.

--- a/openy_lily/templates/include/add-this.html.twig
+++ b/openy_lily/templates/include/add-this.html.twig
@@ -5,7 +5,7 @@
  */
 #}
 
-{{ attach_library('ymca/add-this') }}
+{{ attach_library('openy_lily/add-this') }}
 
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <div class="addthis_sharing_toolbox"></div>
